--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>I am Kate, a PhD student at UW-Madions</h1>
-				<p>My research focuses on examining the impacts of rising temperatures and variable precipitation on sensitive owl species in the Sierra Nevada <a href="/about">Read more about my research...</a></p>
+        		<h1>Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison</h1>
+				<p>My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="/about"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
