--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<footer>
     		<ul>
         		<li><a href="mcginn4@wisc.edu">email</a></li>
-        		<li><a href="https://github.com/KateMcGinnOwl">github.com/KateMcGinnOwl</a></li>
+        		<li><a href="https://github.com/KateMcGinnOwl">GitHub</a></li>
 			</ul>
 		</footer>
 	</body>
