--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I have been a graduate student in the 	<li><a href="http://labs.russell.wisc.edu/peery/">Peery lab</a></li> since 2019. 
+        		<h1>Background</h1>
+				<p>I have been a graduate student in the <li><a href="http://labs.russell.wisc.edu/peery/">Peery lab</a></li> since 2019. 
         I use a number of methods to examine the effect rising temperatures and variable precipitation on the individual fitness and 
         demographic rates of California spotted owls. I am also using bioacoustic methods to examine the co-existence of forest owl 
         species in the Sierra Nevada. 
