--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         species in the Sierra Nevada. 
         
         I graduated with a B.A. from Colorado College in 2018, where I studied the population ecology of Flammulated owls in Pike National 
-        Forest. I completed a <a href"https://digitalccbeta.coloradocollege.edu/pid/coccc:30024">thesis</a> that examined habitat selection 
+        Forest. I completed a <a href = "https://digitalccbeta.coloradocollege.edu/pid/coccc:30024">thesis</a> that examined habitat selection 
 	by male Flammulated owls throughout their breeding season, and I kicked off an extensive project to understand the migration patterns 
 	of the small owl species. Following graduation, I stayed on with Colorado College's Organismal Biology and Ecology department as a paraprofessional. </p>
     		</div><!-- /.blurb -->
