--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about.html">About</a></li>
+	        	<li><a href="https://katemcginnowl.github.io/about.html">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison</h1>
-				<p>My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="/about"> Read more about my research...</a></p>
+				<p>My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
