--- a/index.html
+++ b/index.html
@@ -1,24 +1,7 @@
 <!DOCTYPE html>
 <html>
-	<div class="d-flex mb-3">
-  <div class="border-left col-3">
-    .border-left
-  </div>
-  <div class="border-top col-3">
-    .border-top
-  </div>
-  <div class="border-bottom col-3">
-    .border-bottom
-  </div>
-  <div class="border-right col-3">
-    .border-right
-  </div>
-</div>
-<div class="border-x">
-  .border-x
-</div>
-<div class="border-y">
-  .border-y
+	<div class="text-white bg-gray-dark mb-2">
+  .text-white on .bg-gray-dark
 </div>
 	<head>
 		<title>Kate McGinn</title>
