--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison</h1>
+        		<h1> <div class="text-white bg-gray-dark mb-2"> Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison</div></h1>
 			<img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/>
 				<p>My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
