--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html>
 	<head>
 		<title>Kate McGinn</title>
+		<style>
+h1 {
+  text-align: center; background-color: black;
+  color: white;
+}
+body {
+  background-color: lightgrey;
+  color: black;
+}
+
+		</style>
 	</head>
+	
 	<body>
 		<nav>
     		<ul>
@@ -14,8 +26,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1> <div class="text-white bg-gray-dark mb-2"> Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison</div></h1>
-			<img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/>
+        		<h1> Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison <img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> </h1>
+			
 				<p>My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
