--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@ h1 {
   color: white;
 }
 body {
-  background-color: lightgrey;
+  text-align: center; background-color: lightgrey;
   color: black;
+}
+p.round1 {
+  border: 2px solid white;
+  border-radius: 5px;
+}
+h.round1 {
+  border: 2px solid black;
+  border-radius: 5px;
 }
 
 		</style>
@@ -26,9 +34,9 @@ body {
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1> Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison <img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> </h1>
+        		<h1> class = "round1" > Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison </h1>
 			
-				<p>My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
+				<p> class = "round1" > <img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
