--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ body {
   text-align: center; background-color: lightgrey;
   color: black;
 }
-p.round1 {
+.round1 {
   border: 2px solid white;
-  border-radius: 5px;
+  border-radius: 5px;  font-family: Arial, Helvetica, sans-serif
 }
-h.round1 {
+.round2 {
   border: 2px solid black;
-  border-radius: 5px;
+  border-radius: 5px;  font-family: Arial, Helvetica, sans-serif
 }
 
 		</style>
@@ -34,9 +34,9 @@ h.round1 {
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1 class = "round1" > Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison </h1>
+        		<h1 class = "round1" >Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison </h1>
 			
-				<p class = "round1" > <img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
+				<p class = "round2" ><img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
