--- a/index.html
+++ b/index.html
@@ -26,23 +26,25 @@ body {
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="https://katemcginnowl.github.io/about.html">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<a href="/">Home</a></li>
+	        	<a href="https://katemcginnowl.github.io/about.html">About</a></li>
+        		<a href="/cv">CV</a></li>
+        		<a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1 class = "round1" >Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison </h1>
 			
-				<p class = "round2" ><img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
+				
+			<p class = "round2" ><img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> </p>
+			<p class = "round2" > My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mcginn4@wisc.edu">email</a></li>
-        		<li><a href="https://github.com/KateMcGinnOwl">GitHub</a></li>
+        		<a href="mcginn4@wisc.edu">email</a></li>
+        		<a href="https://github.com/KateMcGinnOwl">GitHub</a></li>
 			</ul>
 		</footer>
 	</body>
