--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ h1 {
 }
 body {
   text-align: center; background-color: lightgrey;
-  color: black;
+  color: black;font-family: Arial, Helvetica, sans-serif
 }
 .round1 {
   border: 2px solid white;
-  border-radius: 5px;  font-family: Arial, Helvetica, sans-serif
+  border-radius: 5px
 }
 .round2 {
   border: 2px solid black;
-  border-radius: 5px;  font-family: Arial, Helvetica, sans-serif
+  border-radius: 5px
 }
 
 		</style>
