--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
 		<title>Kate McGinn</title>
 		<style>
 h1 {
-  text-align: center; background-color: black;
+  text-align: center; background-color: lightgrey;
   color: white;
+  border: 1px solid white;
+  border-radius: 5px
 }
 body {
-  text-align: center; background-color: lightgrey;
-  color: black;font-family: Arial, Helvetica, sans-serif
-}
-.round1 {
-  border: 2px solid white;
+  text-align: center; background-color: WhiteSmoke;
+  color: black;font-family: Arial, Helvetica, sans-serif;   border: 1px solid black;
   border-radius: 5px
 }
-.round2 {
-  border: 2px solid black;
-  border-radius: 5px
-}
+
 
 		</style>
 	</head>
@@ -34,11 +30,11 @@ body {
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1 class = "round1" >Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison </h1>
+        		<h1 >Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison </h1>
 			
 				
-			<p class = "round2" ><img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> </p>
-			<p class = "round2" > My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
+			<p ><img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> </p>
+			<p > My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
