--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<style>
 h1 {
   text-align: center; background-color: lightgrey;
-  color: white;
+  color: black;
   border: 1px solid white;
   border-radius: 5px
 }
