--- a/about.html
+++ b/about.html
@@ -7,12 +7,13 @@
 	</head>
 	<style>
 h1 {
-  text-align: center; background-color: black;
-  color: white;
+  text-align: center; background-color: lightgrey;
+  color: black;
 }
 body {
-  background-color: lightgrey;
-  color: black;
+  background-color: WhiteSmoke;
+  color: black;  border: 2px solid grey;
+  border-radius: 5px;
 }
 
 		</style>
