--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@ body {
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="https://katemcginnowl.github.io/about.html">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<a href="/">Home</a></li>
+	        	<a href="https://katemcginnowl.github.io/about.html">About</a></li>
+        		<a href="/cv">CV</a></li>
+        		<a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
