--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ h1 {
   color: black;
 }
 body {
-  background-color: WhiteSmoke;
+  text-align: center; background-color: WhiteSmoke;
   color: black;  border: 2px solid grey;
   border-radius: 5px;
 }
