--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ h1 {
 body {
   text-align: center; background-color: WhiteSmoke;
   color: black;  border: 2px solid grey;
-  border-radius: 5px;
+  border-radius: 5px; font-family: Arial, Helvetica, sans-serif;
 }
 
 		</style>
