--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
+
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Kate McGinn</title>
-		<style>
-h1 {
-  text-align: center; background-color: lightgrey;
-  color: black;
-  border: 1px solid white;
-  border-radius: 5px
+<html lang="en">
+<head>
+<title>Kate - Home page</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+}
+
+/* Style the header */
+.header {
+  background-color: lightgrey;
+  padding: 20px;
+  text-align: center; font-family: Arial, Helvetica, sans-serif
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333; font-family: Arial, Helvetica, sans-serif; text-align: center;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
 body {
   text-align: center; background-color: WhiteSmoke;
   color: black;font-family: Arial, Helvetica, sans-serif;   border: 1px solid black;
@@ -16,28 +50,30 @@ body {
 }
 
 
-		</style>
-	</head>
 	
-	<body>
-		<nav>
-    		<ul>
-        		<a href="/">Home</a></li>
-	        	<a href="https://katemcginnowl.github.io/about.html">About</a></li>
-        		<a href="/cv">CV</a></li>
-        		<a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h1>Kate McGinn</h1>
+</div>
+
+<div class="topnav">
+	<a href="/">Home</a></li>
+	<a href="https://katemcginnowl.github.io/about.html">About</a></li>
+       	<a href="/cv">CV</a></li>
+        <a href="/blog">Projects</a></li>
+</div>
+<div class="container">
     		<div class="blurb">
         		<h1 >Hi! I am Kate McGinn, a PhD student in Forest and Wildlife Ecology and UW-Madison </h1>
-			
-				
 			<p ><img src = "https://katemcginnowl.github.io/IMG_5225.JPG" width = "300"/> </p>
 			<p > My research examines the impacts of climate change on  owl species in the Sierra Nevada <a href="https://katemcginnowl.github.io/about.html"> Read more about my research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-		<footer>
+</body>
+<footer>
     		<ul>
         		<a href="mcginn4@wisc.edu">email</a></li>
         		<a href="https://github.com/KateMcGinnOwl">GitHub</a></li>
@@ -45,3 +81,7 @@ body {
 		</footer>
 	</body>
 </html>
+
+
+
+
