--- a/about.html
+++ b/about.html
@@ -1,35 +1,71 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Kate McGinn, About</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<style>
-h1 {
-  text-align: center; background-color: lightgrey;
-  color: black;
-}
-body {
-  text-align: center; background-color: WhiteSmoke;
-  color: black;  border: 2px solid grey;
-  border-radius: 5px; font-family: Arial, Helvetica, sans-serif;
+<html lang="en">
+<head>
+<title>Kate - About page</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
 }
 
-		</style>
+body {
+  margin: 0;
+}
+
+/* Style the header */
+.header {
+  background-color: lightgrey;
+  padding: 20px;
+  text-align: center; font-family: Arial, Helvetica, sans-serif
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333; font-family: Arial, Helvetica, sans-serif; text-align: center;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+body { background-color: WhiteSmoke;
+  color: black;font-family: Arial, Helvetica, sans-serif;   border: 1px solid black;
+  border-radius: 5px
+}
+
+
 	
-	<body>
-		<nav>
-    		<ul>
-        		<a href="/">Home</a></li>
-	        	<a href="https://katemcginnowl.github.io/about.html">About</a></li>
-        		<a href="/cv">CV</a></li>
-        		<a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
+</style>
+</head>	
+<body>
+	<div class="header">
+  <h1>Background</h1>
+</div>
+
+<div class="topnav">
+	<a href="/">Home</a></li>
+	<a href="https://katemcginnowl.github.io/about.html">About</a></li>
+       	<a href="/cv">CV</a></li>
+        <a href="/blog">Projects</a></li>
+</div>
+	
 		<div class="container">
     		<div class="blurb">
-        		<h1>Background</h1>
+        		
 				<p>I have been a graduate student in the <a href="http://labs.russell.wisc.edu/peery/">Peery lab</a> since 2019. 
         I use a number of methods to examine the effects of rising temperatures and variable precipitation on the individual fitness and 
         demographic rates of California spotted owls. I am also using bioacoustic methods to examine the co-existence of forest owl 
