--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
 body {
   text-align: center; background-color: WhiteSmoke;
   color: black;font-family: Arial, Helvetica, sans-serif;   border: 1px solid black;
-  border-radius: 5px
+  border-radius: 5px; padding: 15px
 }
 
 
