--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ body {
   color: black;
 }
 
-body { background-color: WhiteSmoke;
+body { background-color: WhiteSmoke; padding: 15px;
   color: black;font-family: Arial, Helvetica, sans-serif;   border: 1px solid black;
   border-radius: 5px
 }
