--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 <div class="topnav">
 	<a href="/">Home</a></li>
 	<a href="https://katemcginnowl.github.io/about.html">About</a></li>
-       	<a href="/cv">CV</a></li>
+       	<a href="https://katemcginnowl.github.io/KMcGinn_Resume_2019.pdf">CV</a></li>
         <a href="/blog">Projects</a></li>
 </div>
 <div class="container">
