--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ body { background-color: WhiteSmoke; padding: 15px;
 <div class="topnav">
 	<a href="/">Home</a></li>
 	<a href="https://katemcginnowl.github.io/about.html">About</a></li>
-       	<a href="/cv">CV</a></li>
+       	<a href="https://katemcginnowl.github.io/KMcGinn_Resume_2019.pdf">CV</a></li>
         <a href="/blog">Projects</a></li>
 </div>
 	
